@@ -183,8 +183,8 @@ ags_add_sequencer_editor_jack_launch(AgsTask *task)
   gui_thread = (AgsGuiThread *) ags_thread_find_type((AgsThread *) main_loop,
 						      AGS_TYPE_GUI_THREAD);
 
-  ags_sequencer_editor_add_jack(AGS_ADD_SEQUENCER_EDITOR_JACK(task)->sequencer_editor,
-				NULL);
+  ags_sequencer_editor_add_source(AGS_ADD_SEQUENCER_EDITOR_JACK(task)->sequencer_editor,
+				  NULL);
 }
 
 /**
